--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mypackagetest",
   "version": "1.0.0",
   "description": "test123",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "dave",
   "license": "ISC",
@@ -21,7 +22,9 @@
     "moment": "^2.29.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
-    "nodemon": "^2.0.4",
     "pg": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
