--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "graphql-playground": "^1.3.17",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
     "mongodb": "^3.6.0",
