--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mypackagetest",
   "version": "1.0.0",
   "description": "test123",
-  "main": "server.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server/index.js"
   },
   "author": "dave",
   "license": "ISC",
