--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "mypackagetest",
   "version": "1.0.0",
   "description": "test123",
-  "main": "server/index.js",
+  "main": "index.js",
+  "engine": {
+    "node": "14.8.0",
+    "npm": "6.14.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "backend": "nodemon server/index.js"
   },
   "author": "dave",
   "license": "ISC",
@@ -27,6 +32,7 @@
     "pg": "^8.3.2"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.5",
     "nodemon": "^2.0.4"
   }
 }
