--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
