--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^2.16.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "moment": "^2.29.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
     "pg": "^8.3.2"
   },
   "devDependencies": {
