--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "apollo-boost": "^0.4.9",
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.2",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "http-proxy-middleware": "^1.0.5",
-    "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
+    "antd": "^3.24.1",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "formik": "^1.5.8",
+    "moment": "^2.24.0",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^11.2.0",
+    "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0-rc.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
-    "webpack-dev-server": "3.11.0"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^1.0.3"
   }
 }
