--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "mypackagetest",
+  "name": "react-boiler-plate",
   "version": "1.0.0",
-  "description": "test123",
+  "description": "react boiler plate",
   "main": "index.js",
   "engine": {
-    "node": "14.8.0",
-    "npm": "6.14.7"
+    "node": "10.16.0",
+    "npm": "6.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
-    "backend": "nodemon server/index.js"
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
-  "author": "dave",
+  "author": "John ahn",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.16.1",
-    "apollo-server-express": "^2.16.1",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "chalk": "^4.1.0",
-    "concurrently": "^5.3.0",
-    "cookie-parser": "^1.4.5",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
-    "graphql": "^15.3.0",
-    "graphql-playground": "^1.3.17",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.0",
-    "mongodb": "^3.6.0",
-    "mongoose": "^5.10.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.3.2"
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.20",
+    "multer": "^1.4.2",
+    "react-redux": "^5.0.7",
+    "saslprep": "^1.0.3",
+    "supports-color": "^7.1.0"
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.5",
-    "nodemon": "^2.0.4"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.19.1"
   }
 }
